--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+    <p>Becoming a software developer intrigues me due to its potential for creative problem-solving and innovation. Crafting elegant code to bring ideas to life and simplify complex tasks captivates my intellect. The dynamic tech landscape's continuous learning and collaborative nature also appeal to me, fostering growth and adapting to evolving challenges. As a software developer, I aspire to contribute to impactful projects, drive technological progress, and derive fulfillment from turning conceptual visions into tangible, functional realities.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
